--- a/src/index.html
+++ b/src/index.html
@@ -29,18 +29,18 @@
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/characters-monsters-life-drawing-tickets-1489636836879?aff=oddtdtcreator">
         <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1752160576/IMG_9965_h7vdim.jpg">
         <div class="p-3">
-          <h3>SPECIAL EVENT: Characters & Monsters</h3>
+          <h3>SPECIAL EVENT: Characters & Monsters Life Drawing</h3>
           <strong>
             <p>Family friendly fantasy poses! Fairies, warriors, and fantasic foes.</p>
             <p>Great for kids, teens, and adults.</p>
           </strong>
           <p>Sun, 10 August 2025<br>10:00AM-12:00PM<br>The Photo Opp Studio</p>
-          <button>Details coming soon!</button>
+          <button>$7 - $15 – Book here</button>
         </div>
-      <!-- </a> -->
+      </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
