--- a/src/index.html
+++ b/src/index.html
@@ -1,75 +1,86 @@
 <div class="mb-4 p-4 max-w-5xl mx-auto">
   <div class="max-w-prose mx-auto">
-    <h1 class="text-6xl text-center mb-4">A friendly, local life drawing community</h1>
+    <h1 class="text-6xl text-center mb-4">
+      A friendly, local life drawing community
+    </h1>
   </div>
-  <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1745845059/ADC_Portrait_20250423_023_b50vsz.jpg" alt="A group of artists drawing portraits of a model."/>
+  <img
+    src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1745845059/ADC_Portrait_20250423_023_b50vsz.jpg"
+    alt="A group of artists drawing portraits of a model."
+  />
 </div>
 
 <section class="container">
   <h2 id="events">Upcoming Events</h2>
   <ul class="grid md:grid-cols-2 gap-4">
     <li class="block shadow bg-white">
-      <a class="block" target="_blank" href="https://www.eventbrite.com/e/portrait-club-draw-each-other-tickets-1429398000899">
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1746018975/IMG_5345_1_viilbm.jpg">
-        <div class="p-3">
-          <h3>Portrait Club: Draw Each Other!</h3>
-          <p>Wed, 9 July 2025<br>7:00-9:00PM<br>Commodore Club</p>
-          <button>Free event - RSVP</button>
-        </div>
-      </a>
-    </li>
-    <li class="block shadow bg-white">
-      <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-july-16-2025-tickets-1429403407069">
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1727289295/IMG_0309_l7lv9x.jpg">
-        <div class="p-3">
-          <h3>Mixed Pose Life Drawing</h3>
-          <p>Wed, 16 July 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Ashley</p>
-          <button>$15 - Book here</button>
-        </div>
-      </a>
-    </li>
-    <li class="block shadow bg-white">
-      <a class="block" target="_blank" href="https://www.eventbrite.com/e/characters-monsters-life-drawing-tickets-1489636836879?aff=oddtdtcreator">
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1752160576/IMG_9965_h7vdim.jpg">
+      <a
+        class="block"
+        target="_blank"
+        href="https://www.eventbrite.com/e/characters-monsters-life-drawing-tickets-1489636836879?aff=oddtdtcreator"
+      >
+        <img
+          src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1752160576/IMG_9965_h7vdim.jpg"
+        />
         <div class="p-3">
           <h3>SPECIAL EVENT: Characters & Monsters Life Drawing</h3>
           <strong>
-            <p>Family friendly fantasy poses! Fairies, warriors, and fantasic foes.</p>
+            <p>
+              Family friendly fantasy poses! Fairies, warriors, and fantasic
+              foes.
+            </p>
             <p>Great for kids, teens, and adults.</p>
           </strong>
-          <p>Sun, 10 August 2025<br>10:00AM-12:00PM<br>The Photo Opp Studio</p>
+          <p>
+            Sun, 10 August 2025<br />10:00AM-12:00PM<br />The Photo Opp Studio
+          </p>
           <button>$7 - $15 – Book here</button>
         </div>
       </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199034/IMG_8034_ab2tov.jpg">
-        <div class="p-3">
-          <h3>Mixed Pose Life Drawing</h3>
-          <p>Wed, 27 August 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: David</p>
-          <button>Coming soon!</button>
-        </div>
+      <img
+        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199034/IMG_8034_ab2tov.jpg"
+      />
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>
+          Wed, 27 August 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
+          David
+        </p>
+        <button>Coming soon!</button>
+      </div>
       <!-- </a> -->
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg">
-        <div class="p-3">
-          <h3>Mixed Pose Life Drawing</h3>
-          <p>Wed, 10 September 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Glenn</p>
-          <button>Coming soon!</button>
-        </div>
+      <img
+        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg"
+      />
+      <div class="p-3">
+        <h3>Mixed Pose Life Drawing</h3>
+        <p>
+          Wed, 10 September 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
+          Glenn
+        </p>
+        <button>Coming soon!</button>
+      </div>
       <!-- </a> -->
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg">
-        <div class="p-3">
-          <h3>To Be Announced</h3>
-          <p>Wed, 24 September 2025<br>7:00-9:00PM<br>FSM Art House<br>Model: TBD</p>
-          <button>Coming soon!</button>
-        </div>
+      <img
+        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg"
+      />
+      <div class="p-3">
+        <h3>To Be Announced</h3>
+        <p>
+          Wed, 24 September 2025<br />7:00-9:00PM<br />FSM Art House<br />Model:
+          TBD
+        </p>
+        <button>Coming soon!</button>
+      </div>
       <!-- </a> -->
     </li>
   </ul>
@@ -77,11 +88,14 @@
 
 <section class="container">
   <h2 class="pt-3">Blog posts & inspiration</h2>
-  
+
   <ul class="grid md:grid-cols-1 gap-4">
     <li class="block shadow bg-white">
       <a class="block" href="/posts/2025-04-12-celebrating-one-year">
-        <img src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_350,w_750/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg" alt="Wildlife Drawing" />
+        <img
+          src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_350,w_750/v1742585378/250226_ADCWildlifeDrawing_M4W_012_teyyz9.jpg"
+          alt="Wildlife Drawing"
+        />
         <div class="p-3">
           <h3>Celebrating One Year of Appleton Drawing Club</h3>
           <p>By Kevin McGillivray • April 12, 2025</p>
