--- a/src/pages/calendar.html
+++ b/src/pages/calendar.html
@@ -1,29 +1,156 @@
-title: Calendar
-----
+title: Calendar ----
 
 <h1>Calendar</h1>
 
 <h2 class="pt-3">Past Events</h2>
 <ul>
-  <li><a href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-june-25-2025-tickets-1401844347179?aff=oddtdtcreator">Mixed Pose Life Drawing: Theseus - Wed, 25 June 2025<br>7:00-9:00PM<br>The Photo Opp Studio<br>Model: Nick<br>Theme: Myths and legends</a></li>
-  <li><a href="https://www.eventbrite.com/e/garden-sketching-at-the-paine-art-center-tickets-1370022597469?aff=oddtdtcreator">Field Trip: Garden Sketching at the Paine - Wed, 18 June 2025<br>6:00-8:00PM<br>Paine Art Center and Gardens</a></li>
-  <li><a href="#">Expressive Charcoal Drawing Fundamentals - Wed, 11 June 2025<br>6:00-9:00PM<br>Richeson School of Art & Gallery<br>Instructor: Kevin McGillivray</a></li>
-  <li><a href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-may-28-2025-tickets-1353280882549?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 28 May 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-movement-tickets-1298049273319?aff=oddtdtcreator">Mixed Pose Life Drawing (Movement) - Wed, 14 May 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1294900374879?aff=oddtdtcreator">Mixed Pose Portrait Drawing (ADC Anniversary!) - Wed, 23 April 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1294896533389?aff=oddtdtcreator">Mixed Pose Life Drawing (April Flowers) - Wed, 9 April 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 26 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 12 March 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator">Wildlife Drawing - Wed, 26 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 19 February 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator">Portrait Drawing - Wed, 15 January 2025<br>7:00-9:00PM - FSM Art House</a></li>
-  <li><a href="https://www.eventbrite.com/e/1122248317929?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 8 January 2025<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 11 December 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 13 November 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator">Mixed Pose Life Drawing - Wed, 9 October 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467">Mixed Pose Life Drawing - Wed, 18 September 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627">Mixed Pose Life Drawing - Wed, 14 August 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457">Mixed Pose Life Drawing - Wed, 24 July 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437">Mixed Pose Life Drawing - Wed, 29 May 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
-  <li><a href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827">Mixed Pose Life Drawing - Wed, 17 April 2024<br>7:00-9:00PM - The Photo Opp Studio</a></li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-july-16-2025-tickets-1429403407069"
+      >Mixed Pose Life Drawing - Wed, 16 July 2025<br />7:00-9:00PM<br />The
+      Photo Opp Studio<br />Model: Ashley</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/portrait-club-draw-each-other-tickets-1429398000899"
+      >Portrait Club: Draw Each Other! - Wed, 9 July 2025<br />7:00-9:00PM<br />Commodore
+      Club</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-june-25-2025-tickets-1401844347179?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing: Theseus - Wed, 25 June 2025<br />7:00-9:00PM<br />The
+      Photo Opp Studio<br />Model: Nick<br />Theme: Myths and legends</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/garden-sketching-at-the-paine-art-center-tickets-1370022597469?aff=oddtdtcreator"
+      >Field Trip: Garden Sketching at the Paine - Wed, 18 June 2025<br />6:00-8:00PM<br />Paine
+      Art Center and Gardens</a
+    >
+  </li>
+  <li>
+    <a href="#"
+      >Expressive Charcoal Drawing Fundamentals - Wed, 11 June 2025<br />6:00-9:00PM<br />Richeson
+      School of Art & Gallery<br />Instructor: Kevin McGillivray</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-may-28-2025-tickets-1353280882549?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 28 May 2025<br />7:00-9:00PM - The Photo
+      Opp Studio</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-movement-tickets-1298049273319?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing (Movement) - Wed, 14 May 2025<br />7:00-9:00PM -
+      The Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1294900374879?aff=oddtdtcreator"
+      >Mixed Pose Portrait Drawing (ADC Anniversary!) - Wed, 23 April 2025<br />7:00-9:00PM
+      - The Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1294896533389?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing (April Flowers) - Wed, 9 April 2025<br />7:00-9:00PM
+      - The Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 26 March 2025<br />7:00-9:00PM - The Photo
+      Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1122263172359?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 12 March 2025<br />7:00-9:00PM - The Photo
+      Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1122267425079?aff=oddtdtcreator"
+      >Wildlife Drawing - Wed, 26 February 2025<br />7:00-9:00PM - The Photo Opp
+      Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1122252761219?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 19 February 2025<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1122285779979?aff=oddtdtcreator"
+      >Portrait Drawing - Wed, 15 January 2025<br />7:00-9:00PM - FSM Art
+      House</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1122248317929?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 8 January 2025<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 11 December 2024<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1028981921627?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 13 November 2024<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a href="https://www.eventbrite.com/e/1028976776237?aff=oddtdtcreator"
+      >Mixed Pose Life Drawing - Wed, 9 October 2024<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-1006412696467"
+      >Mixed Pose Life Drawing - Wed, 18 September 2024<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-the-magic-circle-tickets-965335553627"
+      >Mixed Pose Life Drawing - Wed, 14 August 2024<br />7:00-9:00PM - The
+      Photo Opp Studio</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-927853052457"
+      >Mixed Pose Life Drawing - Wed, 24 July 2024<br />7:00-9:00PM - The Photo
+      Opp Studio</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-904423634437"
+      >Mixed Pose Life Drawing - Wed, 29 May 2024<br />7:00-9:00PM - The Photo
+      Opp Studio</a
+    >
+  </li>
+  <li>
+    <a
+      href="https://www.eventbrite.com/e/life-drawing-with-appleton-drawing-club-tickets-867544457827"
+      >Mixed Pose Life Drawing - Wed, 17 April 2024<br />7:00-9:00PM - The Photo
+      Opp Studio</a
+    >
+  </li>
 </ul>
