--- a/src/index.html
+++ b/src/index.html
@@ -39,19 +39,23 @@
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
-      <img
-        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199034/IMG_8034_ab2tov.jpg"
-      />
-      <div class="p-3">
-        <h3>Mixed Pose Life Drawing</h3>
-        <p>
-          Wed, 27 August 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
-          David
-        </p>
-        <button>Coming soon!</button>
-      </div>
-      <!-- </a> -->
+      <a
+        class="block"
+        target="_blank"
+        href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-august-27-2025-tickets-1554628779529?aff=oddtdtcreator"
+      >
+        <img
+          src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199034/IMG_8034_ab2tov.jpg"
+        />
+        <div class="p-3">
+          <h3>Mixed Pose Life Drawing</h3>
+          <p>
+            Wed, 27 August 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
+            David
+          </p>
+          <button>$15 – Book here</button>
+        </div>
+      </a>
     </li>
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
