Add class event

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,23 @@
       </div>
       <!-- </a> -->
     </li>
+
+    <li class="block shadow bg-white">
+      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <img
+        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1755020957/IMG_7548_jprsgc.jpg"
+      />
+      <div class="p-3">
+        <h3>Expressive Portrait Sketching in Charcoal</h3>
+        <p>
+          Wed, 17 September 2025<br />6:00-9:00PM<br />Richeson School of Art<br />Instructor:
+          Kevin McGillivray
+        </p>
+        <button>Coming soon!</button>
+      </div>
+      <!-- </a> -->
+    </li>
+
     <li class="block shadow bg-white">
       <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
       <img
