--- a/src/pages/calendar.html
+++ b/src/pages/calendar.html
@@ -6,6 +6,14 @@ title: Calendar ----
 <ul>
   <li>
     <a
+      href="https://www.eventbrite.com/e/characters-monsters-life-drawing-tickets-1489636836879?aff=oddtdtcreator"
+      >SPECIAL EVENT: Characters & Monsters Life Drawing - Sun, 10 August
+      2025<br />10:00AM-12:00PM<br />The Photo Opp Studio<br />Family friendly
+      fantasy poses! Fairies, warriors, and fantastic foes.</a
+    >
+  </li>
+  <li>
+    <a
       href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-july-16-2025-tickets-1429403407069"
       >Mixed Pose Life Drawing - Wed, 16 July 2025<br />7:00-9:00PM<br />The
       Photo Opp Studio<br />Model: Ashley</a
