Update event description

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
         src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg"
       />
       <div class="p-3">
-        <h3>To Be Announced</h3>
+        <h3>Long Pose Portrait Drawing</h3>
         <p>
           Wed, 24 September 2025<br />7:00-9:00PM<br />FSM Art House<br />Model:
           TBD
