--- a/src/index.html
+++ b/src/index.html
@@ -28,24 +28,24 @@
             Wed, 27 August 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
             David
           </p>
-          <button>$15 – Book here</button>
+          <button>$15 – Reserve your spot</button>
         </div>
       </a>
     </li>
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-september-10-2025-registration-1603149034919?aff=oddtdtcreator">
       <img
         src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg"
       />
       <div class="p-3">
-        <h3>Mixed Pose Life Drawing</h3>
+        <h3>Mixed Pose Figure Drawing: Baseball!</h3>
         <p>
           Wed, 10 September 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
-          Glenn
+          Glenn<br /><strong>2 for 1 tickets available!</strong>
         </p>
-        <button>Coming soon!</button>
+        <button>$15 – Reserve your spot</button>
       </div>
-      <!-- </a> -->
+      </a>
     </li>
 
     <li class="block shadow bg-white">
