--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     </li>
 
     <li class="block shadow bg-white">
-      <!-- <a class="block" target="_blank" href="https://www.eventbrite.com/e/1259521916959?aff=oddtdtcreator"> -->
+      <a class="block" target="_blank" href="https://www.eventbrite.com/e/portrait-drawing-with-appleton-drawing-club-free-at-fsm-art-house-tickets-1603163347729?aff=oddtdtcreator">
       <img
         src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg"
       />
@@ -75,9 +75,9 @@
           Wed, 24 September 2025<br />7:00-9:00PM<br />FSM Art House<br />Model:
           TBD
         </p>
-        <button>Coming soon!</button>
+        <button>Free – Reserve your spot</button>
       </div>
-      <!-- </a> -->
+      </a>
     </li>
   </ul>
 </section>
