--- a/src/index.html
+++ b/src/index.html
@@ -13,73 +13,11 @@
 <section class="container">
   <h2 id="events">Upcoming Events</h2>
   <ul class="grid md:grid-cols-2 gap-4">
-    <li class="block shadow bg-white">
-      <a
-        class="block"
-        target="_blank"
-        href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-august-27-2025-tickets-1554628779529?aff=oddtdtcreator"
-      >
-        <img
-          src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1703199034/IMG_8034_ab2tov.jpg"
-        />
-        <div class="p-3">
-          <h3>Mixed Pose Life Drawing</h3>
-          <p>
-            Wed, 27 August 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
-            David
-          </p>
-          <button>$15 – Reserve your spot</button>
-        </div>
-      </a>
-    </li>
-    <li class="block shadow bg-white">
-      <a class="block" target="_blank" href="https://www.eventbrite.com/e/figure-drawing-with-appleton-drawing-club-september-10-2025-registration-1603149034919?aff=oddtdtcreator">
-      <img
-        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1725293285/IMG_0262_aaxson.jpg"
-      />
-      <div class="p-3">
-        <h3>Mixed Pose Figure Drawing: Baseball!</h3>
-        <p>
-          Wed, 10 September 2025<br />7:00-9:00PM<br />The Photo Opp Studio<br />Model:
-          Glenn<br /><strong>2 for 1 tickets available!</strong>
-        </p>
-        <button>$15 – Reserve your spot</button>
-      </div>
-      </a>
-    </li>
-
-    <li class="block shadow bg-white">
-      <a class="block" href="/expressive-portrait-sketching-in-charcoal">
-        <img
-          src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1755020957/IMG_7548_jprsgc.jpg"
-        />
-        <div class="p-3">
-          <h3>Expressive Portrait Sketching in Charcoal</h3>
-          <p>
-            Wed, 17 September 2025<br />6:00-9:00PM<br />Richeson School of
-            Art<br />Instructor: Kevin McGillivray
-          </p>
-          <button>Details and registration</button>
-        </div>
-      </a>
-    </li>
-
-    <li class="block shadow bg-white">
-      <a class="block" target="_blank" href="https://www.eventbrite.com/e/portrait-drawing-with-appleton-drawing-club-free-at-fsm-art-house-tickets-1603163347729?aff=oddtdtcreator">
-      <img
-        src="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_center,h_750,w_750/v1742399179/IMG_0498_hjcuyv.jpg"
-      />
-      <div class="p-3">
-        <h3>Long Pose Portrait Drawing</h3>
-        <p>
-          Wed, 24 September 2025<br />7:00-9:00PM<br />FSM Art House<br />Model:
-          TBD
-        </p>
-        <button>Free – Reserve your spot</button>
-      </div>
-      </a>
-    </li>
+    {{ upcoming_events }}
   </ul>
+  <p class="text-center mt-4">
+    <a href="/calendar" class="text-blue-600 hover:text-blue-800 underline">View full calendar →</a>
+  </p>
 </section>
 
 <section class="container">
