--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
       <h1><a href="/">Appleton Drawing Club</a></h1>
       <nav class="mb-3">
         <ul class="flex gap-3">
-          <li><a href="/#events">Events</a></li>
+          <li><a href="/calendar">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/about">About</a></li>
@@ -54,7 +54,7 @@
     <footer>
       <nav class="mb-3">
         <ul class="md:flex gap-3">
-          <li><a href="/#events">Events</a></li>
+          <li><a href="/calendar">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
           <li><a href="/code-of-conduct">Code of conduct</a></li>
