--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://res.cloudinary.com/db5mnmxzn/image/upload/c_fill,g_auto,h_450,w_970/v1725293285/IMG_0262_aaxson.jpg">
   </head>
   <body>
+    {{ next_event_banner }}
     <header>
       <h1><a href="/">Appleton Drawing Club</a></h1>
       <nav class="mb-3">
