--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     src="https://res.cloudinary.com/db5mnmxzn/image/upload/v1745845059/ADC_Portrait_20250423_023_b50vsz.jpg"
     alt="A group of artists drawing portraits of a model."
   />
+  
+  <div class="text-center mt-6 px-3 mx-auto">
+    <p class="text-2xl mb-2">Join 100+ artists of all skill levels in our welcoming community</p>
+    <p class="text-2xl">Classic figure drawing • Special themed events & workshops • All skill levels welcome</p>
+  </div>
 </div>
 
 <section class="container">
