--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
     <header>
       <h1><a href="/">Appleton Drawing Club</a></h1>
       <nav class="mb-3">
-        <ul class="flex gap-3">
+        <ul class="flex flex-wrap gap-x-5 text-xl">
           <li><a href="/calendar">Events</a></li>
           <li><a href="/modeling">For models</a></li>
           <li><a href="/faq">FAQs</a></li>
