Update class details

--- a/src/pages/expressive-portrait-sketching-in-charcoal.html
+++ b/src/pages/expressive-portrait-sketching-in-charcoal.html
@@ -25,7 +25,7 @@ title: Expressive Portrait Sketching in Charcoal ----
       </li>
       <li>Instructor<br /><strong>Kevin McGillivray</strong></li>
       <li>Materials<br /><strong>All materials included</strong></li>
-      <li>Tuition<br /><strong>TBA</strong></li>
+      <li>Tuition<br /><strong>$75</strong></li>
     </ul>
 
     <hr class="block my-4" />
